<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EstiloVertical"
    tools:context=".MainActivity">

    <LinearLayout
        style="@style/EstiloHorizontal"

        >

        <TextView
            android:id="@+id/textViewNombre"
            style="@style/EstiloWrap"
            android:text="@string/textViewNombre"
            />

        <EditText
            android:id="@+id/editTextNombre"
            style="@style/EstiloWrap"
            android:autofillHints=""
            android:hint="@string/editTextNombre"
            android:inputType="textCapSentences|textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"

        >

        <TextView
            android:id="@+id/textViewApellidos"
            style="@style/EstiloWrap"
            android:text="@string/textViewApellidos"/>

        <EditText
            android:id="@+id/editTextApellidos"
            style="@style/EstiloWrap"
            android:autofillHints=""
            android:hint="@string/editTextApellidos"
            android:inputType="textCapSentences|textPersonName"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"
        >

        <TextView
            android:id="@+id/textViewEdad"
            style="@style/EstiloWrap"
            android:text="@string/textViewEdad"/>

        <EditText
            android:id="@+id/editTextEdad"
            style="@style/EstiloWrap"
            android:hint="@string/editTextEdad"
            android:importantForAutofill="no"
            android:inputType="text|number"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"
        >

        <RadioGroup
            android:id="@+id/grupoG"
            style="@style/EstiloMatch"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radH"
                style="@style/EstiloWrap"
                android:checked="true"
                android:text="@string/radH" />


            <RadioButton
                android:id="@+id/radM"
                style="@style/EstiloWrap"
                android:checked="false"
                android:text="@string/radM" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"
        >

        <TextView
            android:id="@+id/textViewEC"
            style="@style/EstiloWrap"
            android:text="@string/textViewEC"/>

        <Spinner
            android:id="@+id/OpcionesEC"
            style="@style/EstiloWrap"/>
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloHorizontal"
        >

        <TextView
            android:id="@+id/textViewHijos"
            style="@style/EstiloWrap"
            android:text="@string/textViewHijos"/>

        <Switch
            android:id="@+id/switchHijos"
            style="@style/EstiloWrap"
            android:checked="false"
            android:text="@string/switchHijos"
            android:textOff="@string/no"
            android:textOn="@string/yes"/>
    </LinearLayout>

    <LinearLayout
        style="@style/EstiloMix">

        <Button
            android:id="@+id/btnInfo"
            style="@style/EstiloWrap"
            android:text="@string/btnInfo" />

        <Button
            android:id="@+id/btnLimpiar"
            style="@style/EstiloWrap"
            android:text="@string/btnLimpiar" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtInfo"
        style="@style/EstiloMix2"
        android:textStyle="bold" />
</LinearLayout>